Devtools: Fix wrong font on mac
BUG=476161

Review URL: https://codereview.chromium.org/1092933003

git-svn-id: svn://svn.chromium.org/blink/trunk@193979 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/front_end/inspectorCommon.css
+++ b/front_end/inspectorCommon.css
@@ -44,21 +44,24 @@ html /deep/ .platform-windows {
 
 html /deep/ .platform-mac .monospace,
 html /deep/ .platform-mac.monospace,
-html /deep/ .platform-mac .source-code {
+html /deep/ .platform-mac .source-code,
+html /deep/ .platform-mac.source-code {
     font-size: 11px !important;
     font-family: Menlo, monospace;
 }
 
 html /deep/ .platform-windows .monospace,
 html /deep/ .platform-windows.monospace,
-html /deep/ .platform-windows .source-code {
+html /deep/ .platform-windows .source-code,
+html /deep/ .platform-windows.source-code {
     font-size: 12px !important;
     font-family: Consolas, Lucida Console, monospace;
 }
 
 html /deep/ .platform-linux .monospace,
 html /deep/ .platform-linux.monospace,
-html /deep/ .platform-linux .source-code {
+html /deep/ .platform-linux .source-code
+html /deep/ .platform-linux.source-code {
     font-size: 11px !important;
     font-family: dejavu sans mono, monospace;
 }
